# rust-utilities

./: .gitignore  AGENT.md  README.md
disk-sweep/: .env.example  Cargo.toml  LICENSE  Makefile  README.md
disk-sweep/src/: agent.rs  analyze.rs  capabilities.rs  clean.rs  cli.rs  config.rs  interval.rs  lib.rs  main.rs  scan.rs  targets.rs  volume.rs  watch_data.rs
disk-sweep/src/commands/: analyze.rs  clean.rs  mod.rs  review.rs  scan.rs  targets.rs  watch.rs
disk-sweep/src/ui/: active_analyze.rs  active_clean.rs  active_scan.rs  app.rs  charts.rs  cleanup_list.rs  mod.rs  progress.rs  project_picker.rs  theme.rs  watch.rs
disk-sweep/tests/: smoke.rs
elevenlabs/: Cargo.toml  README.md
elevenlabs/scripts/: _dev-common.sh  setup-sccache.sh
elevenlabs/src/: api.rs  auth.rs  capabilities.rs  config.rs  main.rs  ops.rs  output.rs  safety.rs
gads/: Cargo.toml  README.md
gads/examples/: gads.toml  mutate-campaign-pause.json  mutate-search-campaign-batch.json
gads/skills/gads-cli/: README.md  SKILL.md
gads/src/: api.rs  auth.rs  capabilities.rs  config.rs  gaql.rs  interactive.rs  main.rs  ops.rs  output.rs  util.rs
git-sweep/: Cargo.toml  README.md
git-sweep/src/: main.rs
mail-sweep/: .env.example  Cargo.toml  Makefile  README.md
mail-sweep/skills/mail-sweep-cli/: SKILL.md
mail-sweep/src/: apply_progress.rs  capabilities.rs  cli.rs  config.rs  lib.rs  main.rs  openrouter.rs  process.rs  safety.rs  secrets.rs  sync.rs
mail-sweep/src/agent/: classify.rs  mod.rs  pattern_from_desc.rs  pattern_suggest.rs  rules_audit.rs  schema.rs
mail-sweep/src/commands/: accounts.rs  apply.rs  learn.rs  list.rs  mod.rs  process.rs  rules.rs  secrets.rs  send.rs  show.rs  stats.rs  sync.rs
mail-sweep/src/mail/: actions.rs  imap.rs  mod.rs  parser.rs  smtp.rs
mail-sweep/src/process/: grouping.rs
mail-sweep/src/rules/: mod.rs  patterns.rs  subsume.rs
mail-sweep/src/store/: mod.rs
mail-sweep/src/ui/: actions.rs  analytics.rs  footer.rs  help.rs  keys.rs  message_view.rs  mod.rs  pattern_prompt.rs  progress.rs  queue.rs  rule_overlays.rs  rules_view.rs  setup.rs  theme.rs  triage.rs
mail-sweep/tests/: smoke.rs
mail-sweep/tests/parser_fixtures/: simple.eml
model-use/: Cargo.toml  Makefile  README.md
model-use/.cargo/: config.toml
model-use/scripts/: build.sh  install.sh  publish.sh  test.sh
model-use/src/: aggregate.rs  budget.rs  capabilities.rs  cli.rs  config.rs  env_schema.rs  lib.rs  main.rs  output.rs  store.rs
model-use/src/commands/: budget.rs  fetch.rs  mod.rs  providers.rs  set.rs  summary.rs
model-use/src/providers/: anthropic.rs  cursor.rs  mod.rs  openai.rs  openrouter.rs  types.rs
model-use/src/ui/: cost_chart.rs  dashboard.rs  gauges.rs  mod.rs  theme.rs
model-use/tests/: provider_parsing.rs  smoke.rs
secret-sweep/: Cargo.toml  README.md
secret-sweep/src/: archive.rs  backup.rs  config.rs  crypto.rs  discover.rs  filter.rs  git_status.rs  main.rs  manifest.rs  output.rs  restore.rs  scan.rs
storeshots/: Cargo.toml  README.md
storeshots/skills/storeshots-cli/: README.md  SKILL.md
storeshots/src/: background.rs  cache.rs  capabilities.rs  composite.rs  config.rs  copy.rs  devices.rs  discover.rs  export.rs  fonts.rs  gemini.rs  interactive.rs  keys.rs  main.rs  openrouter.rs  output.rs  pipeline.rs  prompts.rs  sizes.rs  text_client.rs  validate.rs
storeshots/src/ads/: composite.rs  formats.rs  mod.rs  render.rs  suggest.rs
storeshots/src/brand/: extract.rs  mod.rs  scan.rs  validate.rs
storeshots/src/print/: copy.rs  draw.rs  layout.rs  mod.rs  pdf.rs  qr.rs  render.rs  suggest.rs
storeshots/src/print/formats/: business_card.rs  mod.rs  registry.rs  single_landscape.rs  single_portrait.rs  trifold.rs
storeshots/templates/: secrets.toml.example
