[package]
name = "disk-sweep"
version = "0.1.0"
edition = "2021"
description = "Agent-first smart disk cleanup — scan caches, Xcode junk, and review folders with LLM"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bvelasquez/rust-utilities"
homepage = "https://github.com/bvelasquez/rust-utilities/tree/main/disk-sweep"
keywords = ["cli", "disk", "cleanup", "xcode", "cache"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "disk_sweep"
path = "src/lib.rs"

[[bin]]
name = "disk-sweep"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
libc = "0.2"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
unicode-width = "0.2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
