[package]
name = "elabs"
version = "0.1.0"
edition = "2021"
description = "Agent-first ElevenLabs CLI — TTS, STT, voice cloning and design"
include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "elabs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
