[package]
name = "gads"
version = "0.1.0"
edition = "2021"
description = "Agent-first Google Ads CLI with TUI — read, query, and manage campaigns via REST/GAQL"
include = ["src/**/*", "skills/**/*", "examples/**/*", "Cargo.toml"]

[[bin]]
name = "gads"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
url = "2"

[dev-dependencies]
tempfile = "3"
