[package]
name = "git-sweep"
version = "0.2.0"
edition = "2021"
description = "Scan a projects folder for git repos with uncommitted work"

[[bin]]
name = "git-sweep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
toml = "0.8"
