[package]
name = "mail-sweep"
version = "0.1.0"
edition = "2021"
description = "Agent-first AI email triage — IMAP sync, OpenRouter classification, ratatui inbox"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bvelasquez/rust-utilities"
homepage = "https://github.com/bvelasquez/rust-utilities/tree/main/mail-sweep"
keywords = ["cli", "email", "imap", "smtp", "llm"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "tests/**/*"]

[lib]
name = "mail_sweep"
path = "src/lib.rs"

[[bin]]
name = "mail-sweep"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-imap = "0.11"
async-native-tls = "0.5"
async-std = "1.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "5"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
mail-parser = "0.9"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
