[package]
name = "model-use"
version = "0.1.0"
edition = "2021"
description = "Agent-first LLM cost aggregator — OpenRouter, Anthropic, OpenAI, Cursor usage and budgets"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bvelasquez/rust-utilities"
homepage = "https://github.com/bvelasquez/rust-utilities/tree/main/model-use"
keywords = ["cli", "llm", "openai", "anthropic", "cursor"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "model_use"
path = "src/lib.rs"

[[bin]]
name = "model-use"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
unicode-width = "0.2"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
